    * FIX: avoid exception when called first time and first page ist host tags
    * FIX: fix validation of time-of-day input field (24:00)
    * FIX: automation users can now be deleted again (bug was introduced in 1.2.2p1)
    * FIX: fix logwatch pattern analyzer message "The host xyz is not
           managed by WATO." after direct access via snapin

    Event Console:
    * FIX: apply rewriting of application/hostname also when cancelling events

1.2.2p2:
    Core:
    * FIX: livecheck: fixed handling of one-line plugin outputs and missing \n
           (Thanks to Florent Peterschmitt)

    Checks & Agents:
    * FIX: jolokia_info: ignore ERROR instances
    * FIX: apache_status: use (also) apache_status.cfg instead of apache_status.conf
    * FIX: f5_bigip_vserver: fix wrong OID (13 instead of 1), thanks to Miro Ramza
    * FIX: f5_bigip_psu: handle more than first power supply, thanks to Miro Ramza
    * FIX: ipmi_sensors: ignore sensors in state [NA] (not available)
    * FIX: aix_lvm: handle agents that output an extra header line
    * FIX: zfsget: do not assume that devices begin with /, but mountpoints
    * FIX: ipmi_sensors: handle two cases for DELL correctly (thanks to Sebastian Talmon)
    * FIX: check_dns: enable performance data
    * FIX: free_ipmi: fix name of sensor cache file if hostname contains domain part
    * FIX: ad_replication plugin: Fixed typo (Thanks to Dennis Honke)

    Multisite:
    * List of views: Output the alias of a datasource instead of internal name
    * FIX: fix column editor for join columns if "SERVICE:" is l10n'ed
    * FIX: fix invalid request in livestatus query after reconnect

    WATO:
    * FIX: convert editing of global setting to POST. This avoid URL-too-long
      when defining lots of Event Console actions
    * FIX: LDAP configuration: allow DNs without DC=

    Event Console:
    * FIX: fix icon in events check if host specification is by IP address